# Tempete-sur-lechiquier

./: .gitignore  .gitmodules  .~lock.advancement_cards.ods#  CMakeLists.txt  Makefile  README.md  advancement_cards.ods  cmakeClean.sh  main  main.cpp
.github/workflows/: compilation.yml
client/: AudioManager.cpp  AudioManager.hpp  ClientNetwork.cpp  ClientNetwork.hpp  Game.cpp  Game.hpp  GameData.cpp  GameData.hpp  GameHub.cpp  GameHub.hpp  GamePhase.cpp  GamePhase.hpp  Network.cpp  Network.hpp  Singletons.cpp  Singletons.hpp  Vue.cpp  Vue.hpp  client.cpp  clientTools.cpp  clientTools.hpp
client/Cmodel/: Piece.hpp
client/Entity/: BoardEntity.cpp  BoardEntity.hpp  CardEntity.cpp  CardEntity.hpp  CardsEntity.cpp  CardsEntity.hpp  MainEntity.cpp  MainEntity.hpp  PlayTitleEntity.cpp  PlayTitleEntity.hpp  PoseEntity.cpp  PoseEntity.hpp  RulesEntity.cpp  RulesEntity.hpp  SettingsEntity.cpp  SettingsEntity.hpp  TableBoardEntity.cpp  TableBoardEntity.hpp  TitleEntity.cpp  TitleEntity.hpp
client/Scene/: DownloadScene.cpp  DownloadScene.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  PlaySelectScene.cpp  PlaySelectScene.hpp  QuitScene.cpp  QuitScene.hpp  RulesScene.cpp  RulesScene.hpp  SettingsScene.cpp  SettingsScene.hpp  StartScene.cpp  StartScene.hpp  ZoomCardScene.cpp  ZoomCardScene.hpp
client/model/: CBoard.cpp  CBoard.hpp  CPiece.cpp  CPiece.hpp
code/: client.cc  config.h.in  main.cpp  server.cc
code/bits/: GameHub.cpp  GameHub.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  StartScene.cpp  StartScene.hpp  TitleEntity.cpp  TitleEntity.hpp
code/bits/client/: AudioManager.cc  AudioManager.h  BoardEntity.cc  BoardEntity.h  ButtonsGame.cc  ButtonsGame.h  CardEntity.cc  CardEntity.h  CommonScene.cc  CommonScene.h  ConnectionEntity.cc  ConnectionEntity.h  ConnectionScene.cc  ConnectionScene.h  DownloadEntity.cc  DownloadEntity.h  DownloadScene.cc  DownloadScene.h  GameHub.cc  GameHub.h  GameModel.h  GameScene.cc  GameScene.h  MenuEntity.cc  MenuEntity.h  MenuScene.cc  MenuScene.h  PlayerInfo.cc  PlayerInfo.h  PoseEntity.cc  PoseEntity.h  QuitScene.cc  QuitScene.h  RulesEntity.cc  RulesEntity.h  RulesScene.cc  RulesScene.h  SettingsEntity.cc  SettingsEntity.h  SettingsScene.cc  (+16 more)
code/bits/common/: Board.cc  Board.h  Card.cc  Card.h  CardFunction.cc  CardFunction.h  CardFunctionChooseCases.cc  CardFunctionChooseCases.h  Case.cc  Case.h  Chess.h  Constants.h  Deck.cc  Deck.h  GamePhase.cc  GamePhase.h  ImGuiConstants.h  Network.cc  Network.h  Piece.cc  Piece.h  Protocol.h
code/bits/server/: AnnexFonctionServer.cc  AnnexFonctionServer.h
config/: IpList.txt  Settings.csv
data/: DescriptionCards.csv  Dictionary.csv  Rules.csv  descriptionCardQuentin.txt  descriptionCardToImplement.txt  descriptionCards.csv  descriptionCards.txt
fic_poubelle/: Game.hpp
include/: util.hpp
model/: Bishop.cpp  Bishop.hpp  Card.cpp  Card.hpp  CardFunction.cpp  CardFunction.hpp  CardFunctionChooseCases.cpp  CardFunctionChooseCases.hpp  Case.cpp  Case.hpp  Chess.hpp  Color.hpp  Deck.cpp  Deck.hpp  GamePhase.cpp  GamePhase.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceEnum.hpp  Plateau.cpp  Plateau.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  chess.hpp  echec.hpp
protocole/: Protocole.hpp  protocole.h  protocole.hpp
server/: AnnexFctServer.cpp  AnnexFctServer.hpp  server.cpp  serverTools.cpp  serverTools.hpp
src/: util.cpp
